--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "dht22.pio.h": "c",
         "stdint.h": "c",
-        "cyw43_arch.h": "c"
+        "cyw43_arch.h": "c",
+        "mqtt.h": "c"
     }
 }
